--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,7 @@
 
   "styles": [
     "node_modules/@arcgis/core/assets/esri/themes/light/main.css",
+      "node_modules/@esri/calcite-components/dist/calcite/calcite.css",
     "src/styles.scss"
   ],
 
@@ -101,6 +102,7 @@
             ],
             "styles": [
               "node_modules/@arcgis/core/assets/esri/themes/light/main.css",
+                "node_modules/@esri/calcite-components/dist/calcite/calcite.css",
               "src/styles.scss"
             ],
             "scripts": []
